--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>To-Do List</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style1.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="hero" class="hero">  
@@ -29,6 +29,6 @@
  
            </div>
 
-           <script src="script1.js"></script>
+           <script src="script.js"></script>
     </body>
 </html>
